Sugati/src/objects/Questionnaire_Answer_Options__c.object
<CustomObject>
    <description>A list of all the possible Answer Options</description>
    <fields>
        <fullName>QAO_Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QAO_Questionnaire_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Question</label>
        <referenceTo>Questionnaire_Question__c</referenceTo>
        <relationshipLabel>Questionnaire Answer Options</relationshipLabel>
        <relationshipName>Questionnaire_Answer_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QAO_Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire Answer Option</label>
    <nameField>
        <label>Questionnaire Answer Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Answer Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>